--- a/menu_four.html
+++ b/menu_four.html
@@ -3,112 +3,122 @@
         <head>
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <link rel="stylesheet" href="../css/style.css" />
+            <link rel="stylesheet" href="assets/css/style.css" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
-            <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;600&display=swap" />
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&family=Shrikhand&display=swap" rel="stylesheet" />
             <title>Le Délice des Sens</title>
         </head>
 
         <body>
 
             <header>
+                <div class="arrow_return">
+                    <a href="index.html#restaurants_anchor"><i class="fas fa-arrow-left"></i></a>
+                    </div>
                 <div class="logo">
-                    <a href="index.html"><i class="fas fa-arrow-left"></i></a>
                     <figure>
-                        <img src="../images/logo/ohmyfood.png" alt="logo">
-                    </figure>
-                </div>
-                <div class="restaurant_image">
-                    <figure>
-                        <img src="../images/restaurants/le_délice_des_sens.jpg" alt="Image Restaurant">
+                        <img src="assets/images/logo/ohmyfood.png" alt="logo" >
                     </figure>
                 </div>
             </header>
 
+        <div class="container">
+
+            <section class="welcome_image">
+                <div class="restaurant_image">
+                    <figure>
+                        <img src="assets/images/restaurants/le_delice_des_sens_menu.jpg" alt="Image Restaurant" >
+                    </figure>
+                </div>
+            </section>
+
             <section class="menu">
                 <h2>Le délice des sens</h2>
-                <div class="heart">
+                <div class="heart_menu">
                     <i class="far fa-heart"></i>
                 </div>
+                <div class="menu_cards">
                 <div class="starters">
-                    <h2>ENTREES</h2>
-                    <div class="starters_one">
-                        <h3>Tartare de thon</h3>
-                        <p>Assaisonné au yuzu</p>
+                    <h3>ENTREES</h3>
+                    <div class="border"></div>
+                    <div class="starters_cards">
+                        <h4>Tartare de thon</h4>
+                        <h5>Assaisonné au yuzu</h5>
                         <p>25€</p>
                     </div>
-                    <div class="starters_two">
-                        <h3>Bouchée de homard croustillant</h3>
-                        <p>Et sa farandole de petits légumes</p>
+                    <div class="starters_cards">
+                        <h4>Bouchée de homard croustillant</h4>
+                        <h5>Et sa farandole de petits légumes</h5>
                         <p>35€</p>
                     </div>
-                    <div class="starters_three">
-                        <h3>Velouté de cèpes</h3>
-                        <p>Aux truffes</p>
+                    <div class="starters_cards">
+                        <h4>Velouté de cèpes</h4>
+                        <h5>Aux truffes</h5>
                         <p>20€</p>
                     </div>
                 </div>
                 <div class="dishes">
-                    <h2>PLATS</h2>
-                    <div class="dishes_one">
-                        <h3>Poulet rôti aux herbes de provence</h3>
-                        <p>Et sa crème de truffe</p>
+                    <h3>PLATS</h3>
+                    <div class="border"></div>
+                    <div class="dishes_cards_bigger">
+                        <h4>Poulet rôti aux herbes de provence</h4>
+                        <h5>Et sa crème de truffe</h5>
                         <p>40€</p>
                     </div>
-                    <div class="dishes_two">
-                        <h3>Langouste rôti</h3>
-                        <p>Et ses légumes de saisons</p>
+                    <div class="dishes_cards">
+                        <h4>Langouste rôti</h4>
+                        <h5>Et ses légumes de saisons</h5>
                         <p>35€</p>
                     </div>
-                    <div class="dishes_three">
-                        <h3>Côte de boeuf angus</h3>
-                        <p>Et sa purée de panais</p>
+                    <div class="dishes_cards">
+                        <h4>Côte de boeuf angus</h4>
+                        <h5>Et sa purée de panais</h5>
                         <p>44€</p>
                     </div>
                 </div>
                 <div class="desserts">
-                    <h2>DESSERTS</h2>
-                    <div class="desserts_one">
-                        <h3>Farandole de desserts</h3>
-                        <p>Du chef</p>
+                    <h3>DESSERTS</h3>
+                    <div class="border"></div>
+                    <div class="desserts_cards">
+                        <h4>Farandole de desserts</h4>
+                        <h5>Du chef</h5>
                         <p>18€</p>
                     </div>
-                    <div class="desserts_two">
-                        <h3>Crème brulée</h3>
-                        <p>Revisité</p>
+                    <div class="desserts_cards">
+                        <h4>Crème brulée</h4>
+                        <h5>Revisité</h5>
                         <p>22€</p>
                     </div>
-                    <div class="desserts_three">
-                        <h3>Tiramisu</h3>
-                        <p>A la noisette</p>
+                    <div class="desserts_cards">
+                        <h4>Tiramisu</h4>
+                        <h5>A la noisette</h5>
                         <p>23€</p>
                     </div>
                 </div>
+                </div>
             </section>
 
-            <section>
+            <aside>
                 <div class="order_button">
-                    <h4>Commander</h4>
+                    <h5>Commander</h5>
                 </div>
-            </section>
+            </aside>
 
-            <footer>
+        </div>
+
+        <footer>
+            <div>
                 <div class="footer">
-                    <div class="footer_logo">
-                        <figure>
-                           <img src="../images/logo/ohmyfood.png" alt="logo">
-                        </figure>
-                    </div>
-                    <div class="footer_links">
-                        <ul>
-                            <li><i class="fas fa-utensils" id="forks"></i>Proposer un restaurant</li>
-                            <li><i class="fas fa-hands-helping" id="deal">Devenir partenaire</i></li>
-                            <li>Mentions légales</li>
-                            <li>Contact</li>
-                        </ul>
-                    </div>
+                    <h1>ohmyfood</h1>
+                    <ul>
+                       <li><i class="fas fa-utensils" id="forks"></i><a href="#">Proposer un restaurant</a></li>
+                       <li><i class="fas fa-hands-helping" id="deal"></i><a href="#">Devenir partenaire</a></li>
+                       <li><a href="#">Mentions légales</a></li>
+                       <li><a href="#">Contact</a></li>
+                    </ul>
                 </div>
-            </footer>
+            </div>
+        </footer>
             
         </body>
 </html>
