--- a/menu_one.html
+++ b/menu_one.html
@@ -3,111 +3,122 @@
         <head>
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <link rel="stylesheet" href="../css/style.css" />
+            <link rel="stylesheet" href="assets/css/style.css" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
-            <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;600&display=swap" />
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&family=Shrikhand&display=swap" rel="stylesheet" />
             <title>La Palette du Goût</title>
         </head>
 
         <body>
 
             <header>
+                <div class="arrow_return">
+                    <a href="index.html#restaurants_anchor"><i class="fas fa-arrow-left"></i></a>
+                    </div>
                 <div class="logo">
-                    <a href="index.html"><i class="fas fa-arrow-left"></i></a>
                     <figure>
-                        <img src="../images/logo/ohmyfood.png" alt="logo">
-                    </figure>
-                </div>
-                <div class="restaurant_image">
-                    <figure>
-                        <img src="../images/restaurants/la_palette_du_goût.jpg" alt="Image Restaurant">
+                        <img src="assets/images/logo/ohmyfood.png" alt="logo" >
                     </figure>
                 </div>
             </header>
 
+        <div class="container">
+
+            <section class="welcome_image">
+                <div class="restaurant_image">
+                    <figure>
+                        <img src="assets/images/restaurants/la_palette_du_gout_menu.jpg" alt="Image Restaurant" >
+                    </figure>
+                </div>
+            </section>
+
             <section class="menu">
-                <h2>La palette du gout</h2>
-                <div class="heart">
+                <h2>La palette du goût</h2>
+                <div class="heart_menu">
                     <i class="far fa-heart"></i>
                 </div>
+                <div class="menu_cards">
                 <div class="starters">
-                    <h2>ENTREES</h2>
-                    <div class="starters_one">
-                        <h3>Fricassée d'escargot</h3>
-                        <p>Au piment d'espelette</p>
+                    <h3>ENTREES</h3>
+                    <div class="border"></div>
+                    <div class="starters_cards">
+                        <h4>Fricassée d'escargot</h4>
+                        <h5>Au piment d'espelette</h5>
                         <p>25€</p>
                     </div>
-                    <div class="starters_two">
-                        <h3>Foie gras de canard mi-cuit</h3>
-                        <p>Et ses copeaux de truffe noire</p>
+                    <div class="starters_cards">
+                        <h4>Foie gras de canard mi-cuit</h4>
+                        <h5>Et ses copeaux de truffe noire</h5>
                         <p>35€</p>
                     </div>
-                    <div class="starters_three">
-                        <h3>Oeuf au plat</h3>
-                        <p>Assaisonné à la truffe sur lit de...</p>
+                    <div class="starters_cards">
+                        <h4>Oeuf au plat</h4>
+                        <h5>Assaisonné à la truffe sur lit de...</h5>
                         <p>20€</p>
                     </div>
                 </div>
                 <div class="dishes">
-                    <h2>PLATS</h2>
-                    <div class="dishes_one">
-                        <h3>Filet de boeuf aux herbes</h3>
-                        <p>Accompagnée de sa ribambelle de légumes</p>
+                    <h3>PLATS</h3>
+                    <div class="border"></div>
+                    <div class="dishes_cards_bigger">
+                        <h4>Filet de boeuf aux herbes</h4>
+                        <h5>Accompagnée de sa ribambelle de légumes</h5>
                         <p>40€</p>
                     </div>
-                    <div class="dishes_two">
-                        <h3>Parmentier de queue de boeuf</h3>
-                        <p>A la truffe noire sur sa purée de panais</p>
+                    <div class="dishes_cards">
+                        <h4>Parmentier de queue de boeuf</h4>
+                        <h5>A la truffe noire sur sa purée de panais</h5>
                         <p>35€</p>
                     </div>
-                    <div class="dishes_three">
-                        <h3>Filet de Turbot</h3>
-                        <p>Aux agrumes</p>
+                    <div class="dishes_cards">
+                        <h4>Filet de Turbot</h4>
+                        <h5>Aux agrumes</h5>
                         <p>44€</p>
                     </div>
                 </div>
                 <div class="desserts">
-                    <h2>DESSERTS</h2>
-                    <div class="desserts_one">
-                        <h3>Paris-Brest</h3>
-                        <p>Revisité</p>
+                    <h3>DESSERTS</h3>
+                    <div class="border"></div>
+                    <div class="desserts_cards">
+                        <h4>Paris-Brest</h4>
+                        <h5>Revisité</h5>
                         <p>18€</p>
                     </div>
-                    <div class="desserts_two">
-                        <h3>Macaron au chocolat d'exception</h3>
-                        <p>Et glace à la vanille de Madagascar</p>
+                    <div class="desserts_cards">
+                        <h4>Macaron au chocolat d'exception</h4>
+                        <h5>Et glace à la vanille de Madagascar</h5>
                         <p>22€</p>
                     </div>
-                    <div class="desserts_three">
-                        <h3>Mousse au chocolat</h3>
-                        <p>Au piment d'espelette et à la truffe noire</p>
+                    <div class="desserts_cards">
+                        <h4>Mousse au chocolat</h4>
+                        <h5>Au piment d'espelette et à la truffe noire</h5>
                         <p>23€</p>
                     </div>
+                </div>
                 </div>
             </section>
 
             <aside>
                 <div class="order_button">
-                    <h4>Commander</h4>
+                    <h5>Commander</h5>
                 </div>
             </aside>
 
+         </div>
+
             <footer>
-                <div class="footer">
-                    <div class="footer_logo">
-                        <figure>
-                           <img src="../images/logo/ohmyfood.png" alt="logo">
-                        </figure>
-                    </div>
-                    <div class="footer_links">
+                <div>
+                    <div class="footer">
+                        <h1>ohmyfood</h1>
                         <ul>
-                            <li><i class="fas fa-utensils" id="forks"></i>Proposer un restaurant</li>
-                            <li><i class="fas fa-hands-helping" id="deal">Devenir partenaire</i></li>
-                            <li>Mentions légales</li>
-                            <li>Contact</li>
+                           <li><i class="fas fa-utensils" id="forks"></i><a href="#">Proposer un restaurant</a></li>
+                           <li><i class="fas fa-hands-helping" id="deal"></i><a href="#">Devenir partenaire</a></li>
+                           <li><a href="#">Mentions légales</a></li>
+                           <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
                 </div>
             </footer>
+            
         </body>
 </html>
