--- a/menu_three.html
+++ b/menu_three.html
@@ -3,111 +3,122 @@
         <head>
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <link rel="stylesheet" href="../css/style.css" />
+            <link rel="stylesheet" href="assets/css/style.css" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
-            <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;600&display=swap" />
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&family=Shrikhand&display=swap" rel="stylesheet" />
             <title>A La Française</title>
         </head>
 
         <body>
 
             <header>
+                <div class="arrow_return">
+                    <a href="index.html#restaurants_anchor"><i class="fas fa-arrow-left"></i></a>
+                    </div>
                 <div class="logo">
-                    <a href="index.html"><i class="fas fa-arrow-left"></i></a>
                     <figure>
-                        <img src="../images/logo/ohmyfood.png" alt="logo">
-                    </figure>
-                </div>
-                <div class="restaurant_image">
-                    <figure>
-                        <img src="../images/restaurants/a_la_française.jpg" alt="Image Restaurant">
+                        <img src="assets/images/logo/ohmyfood.png" alt="logo" >
                     </figure>
                 </div>
             </header>
 
+        <div class="container">
+
+            <section class="welcome_image">
+                <div class="restaurant_image">
+                    <figure>
+                        <img src="assets/images/restaurants/a_la_francaise_menu.jpg" alt="Image Restaurant" >
+                    </figure>
+                </div>
+            </section>
+
             <section class="menu">
                 <h2>A la française</h2>
-                <div class="heart">
+                <div class="heart_menu">
                     <i class="far fa-heart"></i>
                 </div>
+                <div class="menu_cards">
                 <div class="starters">
-                    <h2>ENTREES</h2>
-                    <div class="starters_one">
-                        <h3>Tartare de poulpe acidulé</h3>
-                        <p>Aux zests d'orange</p>
+                    <h3>ENTREES</h3>
+                    <div class="border"></div>
+                    <div class="starters_cards">
+                        <h4>Tartare de poulpe acidulé</h4>
+                        <h5>Aux zests d'orange</h5>
                         <p>25€</p>
                     </div>
-                    <div class="starters_two">
-                        <h3>Velouté de légumes d'antan</h3>
-                        <p>Carottes, panais, topinambour</p>
+                    <div class="starters_cards">
+                        <h4>Velouté de légumes d'antan</h4>
+                        <h5>Carottes, panais, topinambour</h5>
                         <p>35€</p>
                     </div>
-                    <div class="starters_three">
-                        <h3>Soupe à l'oignon</h3>
-                        <p>Revisitée</p>
+                    <div class="starters_cards">
+                        <h4>Soupe à l'oignon</h4>
+                        <h5>Revisitée</h5>
                         <p>20€</p>
                     </div>
                 </div>
                 <div class="dishes">
-                    <h2>PLATS</h2>
-                    <div class="dishes_one">
-                        <h3>Coquilles Saint-Jacques</h3>
-                        <p>Accompagnées d'une purée de panais</p>
+                    <h3>PLATS</h3>
+                    <div class="border"></div>
+                    <div class="dishes_cards">
+                        <h4>Coquilles Saint-Jacques</h4>
+                        <h5>Accompagnées d'une purée de panais</h5>
                         <p>40€</p>
                     </div>
-                    <div class="dishes_two">
-                        <h3>Magret de canard</h3>
-                        <p>Et parmentier de pommes de terres</p>
+                    <div class="dishes_cards">
+                        <h4>Magret de canard</h4>
+                        <h5>Et parmentier de pommes de terres</h5>
                         <p>35€</p>
                     </div>
-                    <div class="dishes_three">
-                        <h3>Pigeonneau d'Îles-et-Vilaine</h3>
-                        <p>Sur son lit de gnocchis aux légumes</p>
+                    <div class="dishes_cards">
+                        <h4>Pigeonneau d'Îles-et-Vilaine</h4>
+                        <h5>Sur son lit de gnocchis aux légumes</h5>
                         <p>44€</p>
                     </div>
                 </div>
                 <div class="desserts">
-                    <h2>DESSERTS</h2>
-                    <div class="desserts_one">
-                        <h3>Pétales de violettes-glacés</h3>
-                        <p>Et purée de noisettes</p>
+                    <h3>DESSERTS</h3>
+                    <div class="border"></div>
+                    <div class="desserts_cards">
+                        <h4>Pétales de violettes-glacés</h4>
+                        <h5>Et purée de noisettes</h5>
                         <p>18€</p>
                     </div>
-                    <div class="desserts_two">
-                        <h3>Fondant au chocolat</h3>
-                        <p>Revisité</p>
+                    <div class="desserts_cards">
+                        <h4>Fondant au chocolat</h4>
+                        <h5>Revisité</h5>
                         <p>22€</p>
                     </div>
-                    <div class="desserts_three">
-                        <h3>Millefeuille croustillant</h3>
-                        <p>Myrtilles et pâte d'amande</p>
+                    <div class="desserts_cards">
+                        <h4>Millefeuille croustillant</h4>
+                        <h5>Myrtilles et pâte d'amande</h5>
                         <p>23€</p>
                     </div>
                 </div>
+                </div>
             </section>
 
-            <section>
+            <aside>
                 <div class="order_button">
-                    <h4>Commander</h4>
+                    <h5>Commander</h5>
                 </div>
-            </section>
+            </aside>
 
-            <footer>
+        </div>
+
+        <footer>
+            <div>
                 <div class="footer">
-                    <div class="footer_logo">
-                        <figure>
-                           <img src="../images/logo/ohmyfood.png" alt="logo">
-                        </figure>
-                    </div>
-                    <div class="footer_links">
-                        <ul>
-                            <li><i class="fas fa-utensils" id="forks"></i>Proposer un restaurant</li>
-                            <li><i class="fas fa-hands-helping" id="deal">Devenir partenaire</i></li>
-                            <li>Mentions légales</li>
-                            <li>Contact</li>
-                        </ul>
-                    </div>
+                    <h1>ohmyfood</h1>
+                    <ul>
+                       <li><i class="fas fa-utensils" id="forks"></i><a href="#">Proposer un restaurant</a></li>
+                       <li><i class="fas fa-hands-helping" id="deal"></i><a href="#">Devenir partenaire</a></li>
+                       <li><a href="#">Mentions légales</a></li>
+                       <li><a href="#">Contact</a></li>
+                    </ul>
                 </div>
-            </footer>
+            </div>
+        </footer>
+
         </body>
 </html>
