--- a/menu_two.html
+++ b/menu_two.html
@@ -3,116 +3,127 @@
         <head>
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <link rel="stylesheet" href="../css/style.css" />
+            <link rel="stylesheet" href="assets/css/style.css" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
-            <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;600&display=swap" />
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&family=Shrikhand&display=swap" rel="stylesheet" />
             <title>La Note Enchantée</title>
         </head>
 
         <body>
 
             <header>
+                <div class="arrow_return">
+                    <a href="index.html#restaurants_anchor"><i class="fas fa-arrow-left"></i></a>
+                    </div>
                 <div class="logo">
-                    <a href="index.html"><i class="fas fa-arrow-left"></i></a>
                     <figure>
-                        <img src="../images/logo/ohmyfood.png" alt="logo">
-                    </figure>
-                </div>
-                <div class="restaurant_image">
-                    <figure>
-                        <img src="../images/restaurants/la_note_enchantée.jpg" alt="Image Restaurant">
+                        <img src="assets/images/logo/ohmyfood.png" alt="logo" >
                     </figure>
                 </div>
             </header>
 
+        <div class="container">
+
+            <section class="welcome_image">
+                <div class="restaurant_image">
+                    <figure>
+                        <img src="assets/images/restaurants/la_note_enchantee_menu.jpg" alt="Image Restaurant" >
+                    </figure>
+                </div>
+            </section>
+
             <section class="menu">
                 <h2>La note enchantée</h2>
-                <div class="heart">
+                <div class="heart_menu">
                     <i class="far fa-heart"></i>
                 </div>
+                <div class="menu_cards">
                 <div class="starters">
-                    <h2>ENTREES</h2>
-                    <div class="starters_one">
-                        <h3>Ravioles de foie gras</h3>
-                        <p>Accompagnés de leurs crème à la truffe</p>
+                    <h3>ENTREES</h3>
+                    <div class="border"></div>
+                    <div class="starters_cards">
+                        <h4>Ravioles de foie gras</h4>
+                        <h5>Accompagnés de leurs crème à la truffe</h5>
                         <p>25€</p>
                     </div>
-                    <div class="starters_two">
-                        <h3>Caviar osciètre</h3>
-                        <p>Sur blini à la farine de blé noir</p>
+                    <div class="starters_cards">
+                        <h4>Caviar osciètre</h4>
+                        <h5>Sur blini à la farine de blé noir</h5>
                         <p>35€</p>
                     </div>
-                    <div class="starters_three">
-                        <h3>Homard et espuma de...</h3>
-                        <p>Mariné aux zest d'orange</p>
+                    <div class="starters_cards">
+                        <h4>Homard et espuma de...</h4>
+                        <h5>Mariné aux zest d'orange</h5>
                         <p>20€</p>
                     </div>
-                    <div class="starters_four">
-                        <h3>Foie gras de canard cuit entier</h3>
-                        <p>Confiture de figue et pain toasté</p>
+                    <div class="starters_cards">
+                        <h4>Foie gras de canard cuit entier</h4>
+                        <h5>Confiture de figue et pain toasté</h5>
                         <p>35€</p>
                     </div>
                 </div>
                 <div class="dishes">
-                    <h2>PLATS</h2>
-                    <div class="dishes_one">
-                        <h3>Noix de coquilles Saint-Jacques</h3>
-                        <p>Sur lit de purée de céleri-rave</p>
+                    <h3>PLATS</h3>
+                    <div class="border"></div>
+                    <div class="dishes_cards">
+                        <h4>Noix de coquilles Saint-Jacques</h4>
+                        <h5>Sur lit de purée de céleri-rave</h5>
                         <p>40€</p>
                     </div>
-                    <div class="dishes_two">
-                        <h3>Langoustine poêlée</h3>
-                        <p>Purée de patate douce</p>
+                    <div class="dishes_cards">
+                        <h4>Langoustine poêlée</h4>
+                        <h5>Purée de patate douce</h5>
                         <p>35€</p>
                     </div>
-                    <div class="dishes_three">
-                        <h3>Mijoté de queue de boeuf</h3>
-                        <p>Et riz sauvage aux zests de citron</p>
+                    <div class="dishes_cards">
+                        <h4>Mijoté de queue de boeuf</h4>
+                        <h5>Et riz sauvage aux zests de citron</h5>
                         <p>44€</p>
                     </div>
                 </div>
                 <div class="desserts">
-                    <h2>DESSERTS</h2>
-                    <div class="desserts_one">
-                        <h3>Macaron noisette et chocolat</h3>
-                        <p>Glace au caramel brun et sel de Guérande</p>
+                    <h3>DESSERTS</h3>
+                    <div class="border"></div>
+                    <div class="desserts_cards">
+                        <h4>Macaron noisette et chocolat</h4>
+                        <h5>Glace au caramel brun et sel de Guérande</h5>
                         <p>18€</p>
                     </div>
-                    <div class="desserts_two">
-                        <h3>Baba au rhum revisité</h3>
-                        <p>Avec son coulis de citron</p>
+                    <div class="desserts_cards">
+                        <h4>Baba au rhum revisité</h4>
+                        <h5>Avec son coulis de citron</h5>
                         <p>22€</p>
                     </div>
-                    <div class="desserts_three">
-                        <h3>Tarte au citron meringuée</h3>
-                        <p>Destructurée</p>
+                    <div class="desserts_cards">
+                        <h4>Tarte au citron meringuée</h4>
+                        <h5>Destructurée</h5>
                         <p>23€</p>
                     </div>
                 </div>
+                </div>
             </section>
 
-            <section class="order">
+            <aside>
                 <div class="order_button">
-                    <h4>Commander</h4>
+                    <h5>Commander</h5>
                 </div>
-            </section>
+            </aside>
 
-            <footer>
+        </div>
+
+        <footer>
+            <div>
                 <div class="footer">
-                    <div class="footer_logo">
-                        <figure>
-                           <img src="../images/logo/ohmyfood.png" alt="logo">
-                        </figure>
-                    </div>
-                    <div class="footer_links">
-                        <ul>
-                            <li><i class="fas fa-utensils" id="forks"></i>Proposer un restaurant</li>
-                            <li><i class="fas fa-hands-helping" id="deal">Devenir partenaire</i></li>
-                            <li>Mentions légales</li>
-                            <li>Contact</li>
-                        </ul>
-                    </div>
+                    <h1>ohmyfood</h1>
+                    <ul>
+                       <li><i class="fas fa-utensils" id="forks"></i><a href="#">Proposer un restaurant</a></li>
+                       <li><i class="fas fa-hands-helping" id="deal"></i><a href="#">Devenir partenaire</a></li>
+                       <li><a href="#">Mentions légales</a></li>
+                       <li><a href="#">Contact</a></li>
+                    </ul>
                 </div>
-            </footer>
+            </div>
+        </footer>
+
         </body>
 </html>
